--- a/ios.plist
+++ b/ios.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://a1.files.diawi.com/app-file/mOesytFwaYQTVqPJReEy.ipa</string>
+					<string>https://raw.githubusercontent.com/diendh/updateIos/master/CRMOne.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
